# ConvexHull

./: .clang-format  .gitignore  AdvancedHull.cpp  CMakeLists.txt  GrahamScan.cpp  GrahamScan.h  GrahamScanParallel.cpp  GrahamScanParallel.h  Makefile  ParallelSorting.cpp  ParallelSorting.h  QuickHull.cpp  QuickHull.h  QuickHullParallel.cpp  QuickHullParallel.h  QuickhullParallel.cpp  README.md  RandomHull.cpp  RandomHull.h  RandomHullTesting.cpp  RandomHullTesting.h  main.cpp  multimap.cpp  multimap.h  multimapTesting.cpp  multimapTesting.h  points.cpp  points.h  run.sh
.cache/clangd/index/: GrahamScan.h.DFAB7913A3FC9623.idx  QuickHull.cpp.79CADE27DE800BA4.idx  QuickHull.h.F2A6BBF261C6B887.idx  QuickHullParallel.h.FA2AB40A0ED93E95.idx  main.cpp.279E482D34BEB3A1.idx  points.h.48356289488BBC67.idx
build_directory/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  convex_hull
preprocessed_results/: graham_scan_parallel_20.txt  graham_scan_sequential.txt  quick_hull_parallel_20.txt  quick_hull_sequential.txt  random_hull_parallel_20.txt  random_hull_sequential.txt
results/: graham_scan_parallel_20.txt  graham_scan_sequential.txt  quick_hull_parallel_20.txt  quick_hull_sequential.txt  random_hull_parallel_20.txt  random_hull_sequential.txt
tests/: benchmark.cpp  correction_average.txt  correction_few.txt  correction_many.txt  correction_muie_1.txt  correction_muie_3.txt  correction_muie_4.txt  correction_muie_5.txt  correction_muie_6.txt  test_average.txt  test_average_GS.txt  test_average_QH.txt  test_average_QHP.txt  test_few.txt  test_few_GS.txt  test_few_QH.txt  test_few_QHP.txt  test_many.txt  test_many_GS.txt  test_many_QH.txt  test_many_QHP.txt  test_muie_1.txt  test_muie_2.txt  test_muie_3.txt  test_muie_4.txt  test_muie_5.txt  test_muie_6.txt  tests.cpp  tests.h
tests/test_files/: circle_correction_100_average.txt  circle_correction_100_few.txt  circle_correction_100_many.txt  circle_test_100_few.txt  circle_test_100_many.txt
